# wigwag

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  run_benchmarks.sh  valgrind.sup
benchmarks/: benchmarks.cpp  benchmarks.list  github_wiki.md  markers.hpp  primitives.list  signal_invokation.list  storage_for.hpp  thread_priority.hpp  threading_primitives.list
etc/: valgrind.sup
examples/common/: Logger.cpp  Logger.hpp  Signals.hpp
examples/observable_dictionary/: CollectionOp.hpp  IObservableDictionary.hpp  ObservableDictionaryExample.cpp  SortedObservableDictionary.hpp
include/wigwag/: api_version.hpp  handler_attributes.hpp  life_token.hpp  listenable.hpp  policies.hpp  signal.hpp  signal_attributes.hpp  signal_connector.hpp  signal_policies.hpp  task_executor.hpp  thread_task_executor.hpp  threadless_task_executor.hpp  token.hpp  token_pool.hpp
include/wigwag/detail/: annotations.hpp  api_version.hpp  async_handler.hpp  at_scope_exit.hpp  config.hpp  coverage.hpp  creation_storage_adapter.hpp  disable_warnings.hpp  enable_warnings.hpp  enabler.hpp  flags.hpp  intrusive_list.hpp  intrusive_ptr.hpp  intrusive_ref_counter.hpp  is_constructible.hpp  iterator_base.hpp  listenable_impl.hpp  policies_concepts.hpp  policy_picker.hpp  policy_version_detector.hpp  signal_connector_impl.hpp  signal_impl.hpp  stdcpp_annotations.hpp  storage_for.hpp  type_expression_check.hpp
include/wigwag/detail/policies/creation/: policy_concept.hpp
include/wigwag/detail/policies/exception_handling/: policy_concept.hpp
include/wigwag/detail/policies/life_assurance/: policy_concept.hpp
include/wigwag/detail/policies/ref_counter/: policy_concept.hpp
include/wigwag/detail/policies/state_populating/: policy_concept.hpp
include/wigwag/detail/policies/threading/: policy_concept.hpp
include/wigwag/policies/creation/: ahead_of_time.hpp  lazy.hpp  policies.hpp  policy_concept.hpp  tag.hpp
include/wigwag/policies/exception_handling/: none.hpp  policies.hpp  policy_concept.hpp  print_to_stderr.hpp  tag.hpp
include/wigwag/policies/life_assurance/: intrusive_life_tokens.hpp  life_tokens.hpp  none.hpp  policies.hpp  policy_concept.hpp  single_threaded.hpp  tag.hpp
include/wigwag/policies/ref_counter/: atomic.hpp  policies.hpp  policy_concept.hpp  single_threaded.hpp  tag.hpp
include/wigwag/policies/state_populating/: none.hpp  policies.hpp  policy_concept.hpp  populator_and_withdrawer.hpp  populator_only.hpp  tag.hpp
include/wigwag/policies/threading/: none.hpp  own_mutex.hpp  own_recursive_mutex.hpp  policies.hpp  policy_concept.hpp  shared_mutex.hpp  shared_recursive_mutex.hpp  tag.hpp
scripts/: benchmarks.list  run_all_benchmarks.ps1  run_all_benchmarks.sh  run_benchmarks.ps1  run_benchmarks.sh  run_callgrind.sh  signal_invokation.list
src/benchmarks/: Benchmark.hpp  BenchmarkClass.hpp  BenchmarkContext.hpp  BenchmarkSuite.cpp  BenchmarkSuite.hpp  FunctionBenchmarks.hpp  FunctionsBenchmarks.hpp  GenericBenchmarks.hpp  MutexBenchmarks.hpp  SignalBenchmarks.hpp  SignalsBenchmarks.hpp  benchmarks.cpp  main.cpp  markers.cpp  markers.hpp
src/benchmarks/adapters/: boost.hpp  qt5.hpp  sigcpp.hpp  wigwag.hpp
src/benchmarks/core/: Benchmark.hpp  BenchmarkApp.cpp  BenchmarkApp.hpp  BenchmarkClass.hpp  BenchmarkContext.hpp  BenchmarkId.hpp  BenchmarkSuite.cpp  BenchmarkSuite.hpp
src/benchmarks/core/detail/: BenchmarkId.hpp  BenchmarkResult.cpp  BenchmarkResult.hpp  MeasurementId.hpp  ParameterPair.hpp  ParameterizedBenchmarkId.hpp  ReportTemplateProcessor.hpp
src/benchmarks/core/ipc/: MessageQueue.cpp  MessageQueue.hpp  Messages.cpp  Messages.hpp
src/benchmarks/core/utils/: Barrier.cpp  Barrier.hpp  Logger.cpp  Logger.hpp  Memory.cpp  Memory.hpp  Profiler.hpp  ReportTemplateProcessor.hpp  Storage.hpp  StorageFor.hpp  ThreadPriority.cpp  ThreadPriority.hpp
src/benchmarks/descriptors/function/: boost.hpp  std.hpp
src/benchmarks/descriptors/functions/: boost.hpp  std.hpp
src/benchmarks/descriptors/generic/: boost.hpp  std.hpp  wigwag.hpp
src/benchmarks/descriptors/mutex/: boost.hpp  std.hpp
src/benchmarks/descriptors/signal/: boost.hpp  qt5.hpp  sigcpp.hpp  wigwag.hpp
src/benchmarks/descriptors/signals/: boost.hpp  qt5.hpp  sigcpp.hpp  wigwag.hpp
src/test/: api_v1_test.hpp  compilation_test.hpp  no_exceptions_compilation_test.cpp  pedantic_compilation_test.cpp  profiler.hpp  test.hpp  test_utils.hpp
src/test/utils/: mutexed.hpp  profiler.hpp  thread.hpp
src/utils/: mutexed.hpp  profiler.hpp  storage_for.hpp  test_utils.hpp  thread.hpp  thread_priority.hpp
test/: test.cpp  test.hpp  test_utils.hpp
wigwag/: life_token.hpp  signal.hpp  signal_connector.hpp  signal_policies.hpp  task_executor.hpp  thread_task_executor.hpp  token.hpp  token_pool.hpp
wigwag/detail/: annotations.hpp  at_scope_exit.hpp  config.hpp  enabler.hpp  intrusive_list.hpp  intrusive_ptr.hpp  intrusive_ref_counter.hpp  signal_connector_impl.hpp  signal_impl.hpp
